
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int const* reqdigest; } ;
typedef TYPE_1__ EVP_MD_CTX ;
typedef int EVP_MD ;



const EVP_MD *EVP_MD_CTX_md(const EVP_MD_CTX *ctx)
{
    if (ctx == ((void*)0))
        return ((void*)0);
    return ctx->reqdigest;
}
